# Facturization

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
facturaization/: config.py  configDict.py  database.py  main.py
facturaization/alembic/: env.py
facturaization/alembic/versions/: 26f895fd95af_product_model_has_been_changed_into_.py  4f27723fdab2_first_migration.py  6b5100959d0f_product_model_has_been_added.py  849e2021c555_initial_migration.py  8544bef9bc81_update_clients_model.py  88e11d1c9787_initial_migration.py
facturaization/api/models/: client.py  enterprise.py  invoice.py  product.py
facturaization/api/routers/: client_router.py  enterprise_router.py  invoice_router.py  product_router.py  report_generate.py
facturaization/api/routers/crud/: crud_enterprise.py  crud_invoice.py  crud_report.py
facturaization/api/schemas/: client.py  enterprise.py  invoice.py  product.py
facturaization/routers/: auth_router.py  client_router.py  enterprise_router.py  product_router.py
facturaization/static/css/: client.css  facture.css  pdf.css  style.css
facturaization/templates/: base.html
facturaization/templates/components/: footer.html  header.html  sidebar.html
facturaization/templates/layouts/: base.html  dashboard.html
facturaization/templates/login/: base.html  login.html  register.html
facturaization/templates/pages/: addClient.html  addEnterprise.html  addProduct.html  client.html  clients.html  createInvoice.html  dashboard.html  enterprise.html  generateReport.html  invoices.html  pdf.html  product.html
(+14 files in other folders)
