[tool.poetry]
name = "facturaization"
version = "0.1.0"
description = ""
authors = ["ameerchand30 <ameerchand30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
