[tool.poetry]
name = "facturaization"
version = "0.1.0"
description = ""
authors = ["ameerchand30 <ameerchand30@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
